@@ -8,6 +8,9 @@ contract @mozilla.org/network/protocol;1?name=zim {ee042780-dcf9-11dd-8733-0002a
 component {7f7984b9-acc4-4da9-a159-c378fdca4f46} components/suggest.js
 contract @mozilla.org/autocomplete/search;1?name=kiwix-suggest {7f7984b9-acc4-4da9-a159-c378fdca4f46}
 
+component {52E289CE-46BC-11E1-AB51-5DED4824019B} components/commandLineHandler.js
+contract @mozilla.org/commandlinehandler/general-startup;1?type=kiwix-command {52E289CE-46BC-11E1-AB51-5DED4824019B}
+
 component {080787ae-ddff-11e0-aa79-000c2983f4e1} components/sugar_bridge.py
 contract kiwix.org/SugarBridge;1 {080787ae-ddff-11e0-aa79-000c2983f4e1}
 
