@@ -5,6 +5,7 @@ Kiwix 0.9 beta6
 * FIXED: Invisible menuitems icons on GNU/Linux
 * FIXED: Blanck 404 error page server by kiwix-serve (ID: 3417227)
 * FIXED: Small error during the installation of Ubuntu packages (ID: 3437855)
+* FIXED: Bad singleton Window implementation (ID: 3444121)
 * NEW: New supported user interface languages: Georgian (ka), Estonian (et), 
   Bulgarian (bg), Faroese (fo), Croatian (hr), Iloko (ilo), Limburgish (li), 
   Lithuanian (lt), Basa Banyumasan (map-bms), Oriya (or), Pashto (ps), 
